# qmk_rgb_simulator

./: CMakeLists.txt  README.md  main.py
docs/: qmk_reversing.md  tasks.md
src/: main.py
src/config/: gui.py  strings.py
src/exceptions/: io.py
src/gui/: main_window.py
src/gui/keyboard/: __init__.py  qkey.py  qkeyboard.py
src/layout/: __init__.py  key.py  keyboard_layout.py  matrix.py  parser.py
src/thor/: __init__.py  compiler.py  thor.py
src/thor/src/: Makefile  color.c  config.h  led_tables.h  main.c  matrix_config.h  out.c
src/thor/src/lib8tion/: lib8tion_config.h  math8.h  random8.h  scale8.h  trig8.h
src/thor/src/rgb_matrix/: rgb_matrix.c  rgb_matrix.h  rgb_matrix_types.h
src/thor/src/rgb_matrix/animations/: aux.h  breathing_anim.h  digital_rain_anim.h  jellybean_raindrops_anim.h  raindrops_anim.h  typing_heatmap_anim.h
src/thor/src/rgb_matrix/animations/runners/: effect_runner_dx_dy_dist.h  effect_runner_sin_cos_i.h
